--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
     <html lang="en">
 	  <head>
 	    <meta charset="utf-8">
-	    <title>Slivr</title>
+	    <title>Dear Professor Thomas</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta name="description" content="Slivr">
 	    <meta name="author" content="William Hockey and Zach Perret">
